kubernetes/klipper/tmp/mainsail-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mainsail
  namespace: klipper
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http: #- host: mainsail-home.lab
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mainsail
                port:
                  number: 80
